--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vite + React</title>
+<!-- 카카오맵 API -->
+  <script
+    type="text/javascript"
+    src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%VITE_KAKAOMAP_API%"
+  ></script>
 </head>
 <body>
 <div id="root"></div>
